# newton

./: LICENSE  README.md  canvass.yml  pyproject.toml  teachers_near_schools.csv
newton/: voter.ipynb  voter.py
utils/: api.py  calcs.py  conversions.py  data.py  datasets.py  io.py  location.py  pandas.py  time.py
utils/tests/: test_data.py  test_io.py  test_time.py
voters/: canvass.ipynb  canvass.py  canvass.yml  canvass_L2_W1.yml  canvass_L2_W3W2.yml  canvass_L2_W5_upper_falls.yml  canvass_W2A.yml  canvass_W3A.yml  canvass_W5.yml  canvass_W5AB.yml  canvass_W6BC.yml  voter.ipynb  voter.py  voter_config.yml
